# FeigeChat-Desktop

src/: CMakeLists.txt
src/chatkit/cim/base/: event_loop.cpp  event_loop.h  tcp_client.h
src/chatkit/cim/base/file/: file_util.cpp  file_util.h
src/chatkit/cim/base/util/: string_util.cpp  string_util.h
src/chatkit/cim/core/: user_manager.h
src/feigechat/: CMakeLists.txt
src/feigechat/gui/: logindialog.ui
src/test/client/: simple_client.cpp
src/test/libuvdemo/: client.cpp  server.cpp  uv_tcp_client.cpp  uv_tcp_client.h  uv_tcp_server.cpp  uv_tcp_server.h
src/test/unit_test/: main.cpp  tcp_client_test.cpp  user_manager_test.cpp
